--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <meta charset="utf-8">
 		<title>COMP392-Lab3</title>
-		<!-- CSS Section -->
 		<link rel="stylesheet" href="Content/app.css">
 	</head>
 	<body onload="init();">
