--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="Content/app.css">
 	</head>
 	<body onload="init();">
-		
+		<h3><center>Eunmi Han(300790610)</center></h3>
 		<!-- JavaScript Section -->
 		<script src="Scripts/lib/three.js/build/three.min.js"></script>
 		<script src="Scripts/lib/dat-gui/build/dat.gui.min.js"></script>
